outputs/workspace_output_1773111813_1913.txt
  File "<stdin>", line 67
    print(f"  🔘 {text:30} onclick="{onclick_display}"")
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
